--- a/src/StylesGlobals/Assets.css
+++ b/src/StylesGlobals/Assets.css
@@ -39,3 +39,14 @@ hr {
     font-size: 20px;
 }
 
+
+@media (min-width:1024px) {
+    body {
+        padding-left: 260px;
+    }
+}
+@media (min-width:1900px) {
+    body {
+        padding-left: 380px;
+    }
+}
